// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`sidebar shell snapshots > renders the collapsed rail after the crossfade settles, in place 1`] = `
<div
  data-slot="sidebar"
  style="display: contents;"
>
  <div
    class="root collapsed railIn quietBars"
    style=""
  >
    <div
      class="logoRow"
    >
      <button
        aria-label="Open sidebar"
        class="iconButton toggle"
        type="button"
      >
        <span
          aria-hidden="true"
          class="railMark"
        >
          <div
            data-slot="sidebar.brand.mark"
            style="display: contents;"
          >
            <svg
              aria-hidden="true"
              data-content="965fe321"
              fill="none"
              height="17.6580310880829"
              viewBox="0 0 23.16 17.04"
              width="24"
            />
          </div>
        </span>
        <svg
          class="panelIcon"
          data-content="35f95b0c"
          fill="none"
          height="18"
          viewBox="0 0 16 16"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        />
      </button>
    </div>
    <div
      aria-label="Work mode"
      class="modeSwitch"
      role="group"
    >
      <span
        aria-hidden="true"
        class="modeThumb"
        data-position="left"
      />
      <button
        aria-label="Start work"
        aria-pressed="true"
        class="modeSegment modeSegmentActive"
        type="button"
      >
        <svg
          data-content="c0ce4dcc"
          fill="none"
          height="18"
          viewBox="0 0 16 16"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        />
      </button>
      <div
        data-slot="sidebar.primary.action"
        style="display: contents;"
      />
    </div>
    <div
      class="regionArea"
    >
      <div
        data-slot="sidebar.workspaces"
        style="display: contents;"
      />
    </div>
    <div
      class="footArea"
    >
      <div
        class="footerActions"
      >
        <div
          data-slot="sidebar.footer.action"
          style="display: contents;"
        />
      </div>
      <div
        class="settingsArea"
      >
        <div
          data-slot="sidebar.settings"
          style="display: contents;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`sidebar shell snapshots > renders the expanded column (wordmark, capsule, empty holes) 1`] = `
<div
  data-slot="sidebar"
  style="display: contents;"
>
  <div
    class="root quietBars"
    style="width: 300px;"
  >
    <div
      class="logoRow"
    >
      <button
        aria-label="Start work"
        class="brand wide"
        type="button"
      >
        <span
          aria-hidden="true"
          class="brandIdentity"
        >
          <span
            class="brandMark"
          >
            <div
              data-slot="sidebar.brand.mark"
              style="display: contents;"
            >
              <svg
                aria-hidden="true"
                data-content="965fe321"
                fill="none"
                height="17.6580310880829"
                viewBox="0 0 23.16 17.04"
                width="24"
              />
            </div>
          </span>
          <span
            class="brandName"
          >
            <div
              data-slot="sidebar.brand.name"
              style="display: contents;"
            >
              <svg
                aria-hidden="true"
                data-content="951274b9"
                fill="none"
                height="24"
                viewBox="26 0 156 24"
                width="156"
              />
            </div>
          </span>
        </span>
      </button>
      <button
        aria-label="Collapse sidebar"
        class="iconButton toggle"
        type="button"
      >
        <svg
          class="panelIcon"
          data-content="35f95b0c"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        />
      </button>
    </div>
    <div
      aria-label="Work mode"
      class="modeSwitch"
      role="group"
    >
      <span
        aria-hidden="true"
        class="modeThumb"
        data-position="left"
      />
      <button
        aria-label="Start work"
        aria-pressed="true"
        class="modeSegment modeSegmentActive"
        type="button"
      >
        <span
          class="modeLabel"
        >
          Agentic Coding
        </span>
      </button>
      <div
        data-slot="sidebar.primary.action"
        style="display: contents;"
      />
    </div>
    <div
      class="regionArea"
    >
      <div
        data-slot="sidebar.workspaces"
        style="display: contents;"
      />
    </div>
    <div
      class="footArea"
    >
      <div
        class="footerActions"
      >
        <div
          data-slot="sidebar.footer.action"
          style="display: contents;"
        />
      </div>
      <div
        class="settingsArea"
      >
        <div
          data-slot="sidebar.settings"
          style="display: contents;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`sidebar shell snapshots > renders the expanded column in the default locale (zh, no setLocale) 1`] = `
<div
  data-slot="sidebar"
  style="display: contents;"
>
  <div
    class="root quietBars"
    style="width: 300px;"
  >
    <div
      class="logoRow"
    >
      <button
        aria-label="开始工作"
        class="brand wide"
        type="button"
      >
        <span
          aria-hidden="true"
          class="brandIdentity"
        >
          <span
            class="brandMark"
          >
            <div
              data-slot="sidebar.brand.mark"
              style="display: contents;"
            >
              <svg
                aria-hidden="true"
                data-content="965fe321"
                fill="none"
                height="17.6580310880829"
                viewBox="0 0 23.16 17.04"
                width="24"
              />
            </div>
          </span>
          <span
            class="brandName"
          >
            <div
              data-slot="sidebar.brand.name"
              style="display: contents;"
            >
              <svg
                aria-hidden="true"
                data-content="951274b9"
                fill="none"
                height="24"
                viewBox="26 0 156 24"
                width="156"
              />
            </div>
          </span>
        </span>
      </button>
      <button
        aria-label="收起侧边栏"
        class="iconButton toggle"
        type="button"
      >
        <svg
          class="panelIcon"
          data-content="35f95b0c"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        />
      </button>
    </div>
    <div
      aria-label="工作模式"
      class="modeSwitch"
      role="group"
    >
      <span
        aria-hidden="true"
        class="modeThumb"
        data-position="left"
      />
      <button
        aria-label="开始工作"
        aria-pressed="true"
        class="modeSegment modeSegmentActive"
        type="button"
      >
        <span
          class="modeLabel"
        >
          Agentic Coding
        </span>
      </button>
      <div
        data-slot="sidebar.primary.action"
        style="display: contents;"
      />
    </div>
    <div
      class="regionArea"
    >
      <div
        data-slot="sidebar.workspaces"
        style="display: contents;"
      />
    </div>
    <div
      class="footArea"
    >
      <div
        class="footerActions"
      >
        <div
          data-slot="sidebar.footer.action"
          style="display: contents;"
        />
      </div>
      <div
        class="settingsArea"
      >
        <div
          data-slot="sidebar.settings"
          style="display: contents;"
        />
      </div>
    </div>
  </div>
</div>
`;
